# thesis

./: .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  05_tab_transformer_draft.ipynb  4.0c-mb-transformer-performance.ipynb  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  constraints.txt  logging.yaml  prod.env  pyproject.toml  requirements.txt  setup.py  start.sh  test_environment.py  tox.ini
.github/: action.yaml  dependabot.yml  release.yml
.github/workflows/: action.yaml  action_docker.yaml  action_latex.yaml  action_python.yaml
data/raw/: Data.sas  livevol_exchange_ids.txt  livevol_trade_condition_ids.xlsx  preprocessing.sql
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 06-mb-visualization-positional-encoding.ipynb  1.0-mb-data-preprocessing-mem-reduce.ipynb  1.0-mb-data_preprocessing_mem_reduce.ipynb  2.0-mb-data-preprocessing-split.ipynb  2.0-mb-data_preprocessing_loading_splitting.ipynb  2.0-mb-data_preprocessing_overfitting.ipynb  2.0-mb-data_preprocessing_split_adv_val_time_consistency.ipynb  2.0a-mb-data-preprocessing-supervised.ipynb  2.0b-mb-data-preprocessing-unlabelled.ipynb  2.0b-mb-data-preprocessing-unsupervised.ipynb  3.0-mb-classical_rules.ipynb  3.0-mb-data_preprocessing_explanatory_data_analysis.ipynb  3.0-mb-feature_engineering_baseline.ipynb  3.0a-mb-comparsion-transformations.ipynb  3.0a-mb-data_preprocessing_explanatory_data_analysis.ipynb  3.0a-mb-explanatory-data-analysis.ipynb  3.0a-mb-explanatory_data_analysis.ipynb  3.0b-feature-engineering.ipynb  3.0b-mb-comparsion-transformations.ipynb  3.0b-mb-explanatory-matched-unmatched.ipynb  3.0b-mb-feature_sets_gbm_cv.ipynb  3.0c-feature-engineering-robust-scaler.ipynb  3.0c-feature-engineering.ipynb  3.0d-early-stopping.ipynb  3.0d-mb-adv_val.ipynb  4.0-mb-feature_engineering_baseline.ipynb  4.0a-mb-classical-rules.ipynb  4.0a-mb-classical_rules.ipynb  4.0a-mb-logistic-regression.ipynb  4.0b-mb-fttransformer.ipynb  4.0b-mb-gbm_baseline.ipynb  4.0b-mb-gradient-boosting.ipynb  4.0b-mb-ml_baseline.ipynb  4.0b-mb-tabtransformer.ipynb  4.0b-mb-tabtransformer_baseline.ipynb  4.0c-mb-feature-importances.ipynb  4.0c-mb-fttransformer.ipynb  4.0c-mb-logistic-regression.ipynb  4.0c-mb-tabtransformer.ipynb  4.0c-mb-tabtransformer_baseline.ipynb  (+79 more)
notebooks/runs/embeddings/: events.out.tfevents.1683820770.LAPTOP-B75OBHAM.42868.0  projector_config.pbtxt
notebooks/wandb/: latest-run
references/obsidian/: Ammo Trade Initiator.md  Expose.md  GCP.md  Open Points in my head.md  Paper 2 movie 🍿.md  Preprocessing.md  TOC.md  ZoteroObsidianCitations-all-data.json  ZoteroObsidianCitations-missing-entries.json  attention_map.md  broken links output.md  draft_ft_transformer.md  empty files.md  files without tags.md  index.md  orphaned files output.md  results_of_supervised.md  semi-supervised.md  ❓ Questions.md  ❓Questions.md  🍔Layer norm.md  🍕Application study.md  🍿Paper 2 movie.md  🎨transformer.canvas  📜 TOC.md  🗿TOC.md  🧞‍♀️Mastermind Group.md
references/obsidian/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  workspace  workspace.json
references/obsidian/Classical rules/: @grauerOptionTradeClassification2022.md
references/obsidian/IW-Queues/: IW-Queue.md
references/obsidian/chapters/: attention.md  (+95 more)
reports/: AlgorithmStyle.tex  TOC.tex  Template_English.ist  Template_English.tex  expose.ist  expose.tex  montage.sh  presentation.tex  sdqbeamer.cls  summary.tex  thesis.tex
reports/Content/: Appendix.tex  Declaration_Seminar.tex  Declaration_Thesis.tex  Erklärung_Abschlussarbeit.tex  Erklärung_Seminararbeit.tex  Formal_algorithms.tex  Literaturverzeichnis.bib  Section1.tex  Section2.tex  Section3.tex  Titelseite_Abschlussarbeit.tex  Titelseite_Seminararbeit.tex  Titlepage_Seminar.tex  Titlepage_Thesis.tex  __latexindent_temp_main.tex  bibliography.bib  cboe-supervised-all-summary-stats.tex  cboe-transfer-test-summary-stats.tex  cboe-tweaked.tex  cboe_all_supervised_all-issue_type-eff-spread.tex  cboe_all_supervised_all-issue_type.tex  cboe_all_supervised_all-master-eff-spread.tex  cboe_all_supervised_all-master.tex  cboe_all_supervised_all-myn_binned-eff-spread.tex  cboe_all_supervised_all-myn_binned.tex  cboe_all_supervised_all-option_type-eff-spread.tex  cboe_all_supervised_all-option_type.tex  cboe_all_supervised_all-prox_q_binned-eff-spread.tex  cboe_all_supervised_all-prox_q_binned.tex  cboe_all_supervised_all-trade_size_binned-eff-spread.tex  cboe_all_supervised_all-trade_size_binned.tex  cboe_all_supervised_all-ttm_binned-eff-spread.tex  cboe_all_supervised_all-ttm_binned.tex  cboe_all_supervised_all-year_binned-eff-spread.tex  cboe_all_supervised_all-year_binned.tex  cboe_all_transfer_test-issue_type-eff-spread.tex  cboe_all_transfer_test-issue_type.tex  cboe_all_transfer_test-master-eff-spread.tex  cboe_all_transfer_test-master.tex  cboe_all_transfer_test-myn_binned-eff-spread.tex  (+63 more)
reports/Graphs/: clnv-algo.pdf_tex  diagrams.pptx  emo-algo.pdf_tex  fttransformer.pdf_tex  grauer-algo.pdf_tex  lr-algo.pdf_tex  post-norm.pdf_tex  pre-norm.pdf_tex  random-token-replacement.pdf_tex  research-framework.pdf_tex  stacking-algo.pdf_tex  tabtransformer.pdf_tex  transformer-architecture.pdf_tex
src/: __init__.py
src/data/: const.py  fs.py  make_dataset.py
src/features/: build_features.py
src/models/: basemodel.py  basemodel_torch.py  classical_classifier.py  mlp.py  objective.py  predict_model.py  tabtransformer.py  train_model.py
src/optim/: __init__.py  early_stopping.py
src/otc/: __init__.py
src/util/: check_formalia.py  check_url.py
src/utils/: check_formalia.py  check_url.py  config.py  io_utils.py
tests/: __init__.py  conftest.py  templates.py  test_activation.py  test_classical_classifier.py  test_dataloader.py  test_dataset.py  test_early_stopping.py  test_fttransformer.py  test_metrics.py  test_nn.py  test_objective.py  test_setup.py  test_tabnet.py  test_tabtransformer.py  test_transformer.py  test_transformer_classifier.py
thesis/: pyvenv.cfg
(+641 files in other folders)
