# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otc"
authors = [
  { name="Markus Bilz", email="github@markusbilz.com" },
]
description = "Code to perform option trade classification using machine learning."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Framework :: Jupyter",
  "Operating System :: OS Independent",
]
dependencies =[
  "click==8.1.3",
  "catboost==1.1",
  "fastparquet==2023.2.0",
  "gcsfs==2023.1.0",
  "google-auth==2.16.1", # needed by w&b in runpod
  "modin==0.17.0",
  "numpy==1.23.4",
  "optuna==3.0.3",
  "pandas==1.5.1",
  "pandas-datareader==0.10.0",
  "psutil==5.9.4", #needed by w&b
  "pydantic==1.10.2",
  "python-dotenv>=0.5.1",
  "pyyaml==6.0",
  "requests==2.28.2",
  "scikit-learn==1.1.3",
  "seaborn==0.12.2",
  "shap==0.41.0",
  "torch==1.13.0",
  "tqdm==4.64.1",
  "typer==0.7.0",
  "wandb==0.13.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "coverage",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "sphinx",
  "tox",
]

[project.urls]
"Homepage" = "https://github.com/KarelZe/thesis"
"Bug Tracker" = "https://github.com/KarelZe/thesis/issues"

[tool.autoflake]
recursive = true
in-place = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"

[tool.mypy]
# https://github.com/python/mypy/issues/2410
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=["numpy.*", "torch.*"]

[tool.setuptools.dynamic]
version = { attr = "otc.__version__" }

[tool.pytest.ini_options]
minversion = 7.0
addopts = "-ra -p no:warnings -v --cov --cov-report term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/otc/utils*",
    "debug_*.py",
    "tests/*",
]
